# Oeffikator

./: .env  .gitignore  APIInterface.py  BVGRestAPI.py  CHANGELOG  Dockerfile  Oeffikator.ipynb  README.md  TimeTransformer.py  docker-compose.yml  pyproject.toml
.github/workflows/: code_checks.yml  code_style_checks.yml  python_tests.yml
apis/: APIInterface.py  BVGRestAPI.py  OeffiAPI.py  __init__.py
oeffikator/: Dockerfile  Oeffikator.ipynb  TimeTransformer.py  __init__.py  db_functionality.py  main.py  requests.py  settings.py
oeffikator/apis/: APIInterface.py  BVGRestAPI.py  OeffiAPI.py  __init__.py  api_interface.py  bvg_rest_api.py  oeffi_api.py
oeffikator/example/: Oeffikator.ipynb
oeffikator/point_generator/: GridPointGenerator.py  PointGeneratorInterface.py  TriangularPointGenerator.py
oeffikator/point_iterator/: GridPointIterator.py  PointIteratorInterface.py  TriangularPointIterator.py  grid_point_iterator.py  point_iterator_interface.py  triangular_iterator_interface.py
oeffikator/requesters/: __init__.py  bvg_rest_requester.py  geopy_location_requester.py  oeffi_requester.py  requester_interface.py  rest_requester.py
oeffikator/sql_app/: crud.py  database.py  models.py  schemas.py
point_generator/: GridPointGenerator.py  PointGeneratorInterface.py  TriangularPointGenerator.py
results/: 13365647_52548871.csv  13365910_52548990.csv  13367010_52542780.csv  13380641_52535136.csv  13413892_52551316.csv  README.md  results3.txt  results4.txt  results5.csv
scripts/: initial_db_queries.sql
tests/: .env  __init__.py  api_commons.py  docker-compose.yml  requesters_commons.py  test_api.py  test_point_generator.py  test_point_iterators.py  test_requesters.py
transport_apis/bvg/: Dockerfile
transport_apis/db/: Dockerfile
transport_apis/vbb/: Dockerfile
visualization/: Dockerfile  __init__.py  heatmap.py  main.py  map.py  settings.py
