[tool.poetry]
name = "oeffikator"
version = "0.2.4"
description = "A visualisation tool for commuting times on public transport"
authors = ["Eric Kolibacz <e.kolibacz@yahoo.de>"]
license = "GNU GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
numpy = "^1.24.0"
matplotlib = "^3.6.2"
scipy = "^1.9.3"
requests = "^2.28.1"
geopy = "^2.3.0"
nest-asyncio = "^1.5.6"
jupyter = "^1.0.0"
scikit-learn = "^1.2.0"

[tool.poetry.group.code_check.dependencies]
isort = "^5.11.4"
black = {extras = ["jupyter"], version = "^22.12.0"}
pylint = "^2.15.9"
pycodestyle = "^2.10.0"
nbqa = "^1.6.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"


[tool.poetry.group.example.dependencies]
imageio = "^2.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true

[tool.pylint."MESSAGES CONTROL"]
max-line-length = 120
disable = "E0611"