[tool.poetry]
name = "oeffikator"
version = "1.1.13"
description = "A visualisation tool for commuting times on public transport"
authors = ["Eric Kolibacz <e.kolibacz@yahoo.de>"]
license = "GNU GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
numpy = "^1.24.0"
scipy = "^1.9.3"
requests = "^2.28.1"
geopy = "^2.3.0"
nest-asyncio = "^1.5.6"
jupyter = "^1.0.0"
scikit-learn = "^1.2.0"
fastapi = "^0.95.0"
uvicorn = "^0.21.0"
sqlalchemy = "^2.0.0"
geoalchemy2 = "^0.13.1"
psycopg2-binary = "^2.9.5"
shapely = "^2.0.0"
aiohttp = "^3.8.4"
asyncio = "^3.4.3"
pytz = "^2022.7.1"

[tool.poetry.group.code_check.dependencies]
isort = "^5.11.4"
black = {extras = ["jupyter"], version = "^23.0.0"}
pylint = "^2.15.9"
pycodestyle = "^2.10.0"
nbqa = "^1.6.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"



[tool.poetry.group.visualization.dependencies]
dash = "^2.8.1"
matplotlib = "^3.7.0"
folium = "^0.14.0"
imageio = "^2.25.1"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true

[tool.pylint."MESSAGES CONTROL"]
max-line-length = 120
disable = "E0611"