[tool.poetry]
name = "oeffikator"
version = "1.2.6"
description = "A visualisation tool for commuting times on public transport"
authors = ["Eric Kolibacz <e.kolibacz@yahoo.de>"]
license = "GNU GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.0.0"
numpy = "^1.26.1"
scipy = "^1.9.3"
requests = "^2.28.1"
geopy = "^2.3.0"
nest-asyncio = "^1.5.6"
jupyter = "^1.0.0"
scikit-learn = "^1.2.0"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
sqlalchemy = "^2.0.0"
geoalchemy2 = "^0.14.0"
psycopg2-binary = "^2.9.5"
shapely = "^2.0.0"
aiohttp = "^3.9.0-beta.0"
asyncio = "^3.4.3"
pytz = "^2022.7.1"
pydantic-settings = "^2.0.3"

[tool.poetry.group.code_check.dependencies]
isort = "^5.11.4"
black = {extras = ["jupyter"], version = "^23.0.0"}
pylint = "^3.0.0"
pycodestyle = "^2.10.0"
nbqa = "^1.6.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"



[tool.poetry.group.visualization.dependencies]
dash = "^2.8.1"
matplotlib = "^3.7.0"
folium = "^0.15.0"
imageio = "^2.25.1"
gunicorn = "^22.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true

[tool.pylint."MESSAGES CONTROL"]
max-line-length = 120
disable = "E0611"